k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-app
  labels:
    app: quarkus-app
spec:
  port:
    targetPort: 8080-http
  to:
    kind: Service
    name: quarkus-app
    weight: 100
  wildcardPolicy: None
  tls:
    insecureEdgeTerminationPolicy: Redirect
